syntax = "proto3";

import "google/protobuf/timestamp.proto";

//protoc --go_out=plugins=grpc:. *.proto

package commentsService;
option go_package = ".;commentsService";


message Comment {
  string CommentID = 1;
  string HotelID = 2;
  string UserID = 3;
  string Message = 4;
  repeated string Photos = 5;
  double Rating = 6;
  google.protobuf.Timestamp CreatedAt = 7;
  google.protobuf.Timestamp UpdatedAt = 8;
}

message CreateCommentReq {
  string HotelID = 1;
  string UserID = 2;
  string Message = 3;
  repeated string Photos = 4;
  double Rating = 5;
}

message CreateCommentRes {
  Comment Comment = 1;
}


service commentsService {
  rpc CreateComment(CreateCommentReq) returns (CreateCommentRes) {}
}